; ModuleID = '/home/carl/AnghaBench/linux/arch/riscv/net/extr_bpf_jit_comp.c_bpf_to_rv_reg.c'
source_filename = "/home/carl/AnghaBench/linux/arch/riscv/net/extr_bpf_jit_comp.c_bpf_to_rv_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rv_jit_context = type { i32 }

@regmap = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.rv_jit_context*)* @bpf_to_rv_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bpf_to_rv_reg(i32 %0, %struct.rv_jit_context* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rv_jit_context*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.rv_jit_context* %1, %struct.rv_jit_context** %4, align 8
  %6 = load i32*, i32** @regmap, align 8
  %7 = load i32, i32* %3, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i32, i32* %6, i64 %8
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %17 [
    i32 133, label %12
    i32 132, label %12
    i32 131, label %12
    i32 130, label %12
    i32 129, label %12
    i32 128, label %12
  ]

12:                                               ; preds = %2, %2, %2, %2, %2, %2
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.rv_jit_context*, %struct.rv_jit_context** %4, align 8
  %15 = getelementptr inbounds %struct.rv_jit_context, %struct.rv_jit_context* %14, i32 0, i32 0
  %16 = call i32 @__set_bit(i32 %13, i32* %15)
  br label %17

17:                                               ; preds = %12, %2
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @__set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
